source link and logging

--- a/templates/home.html
+++ b/templates/home.html
@@ -12,7 +12,11 @@
 	</p>
 
 	<p>
-	This project is a demonstration of my contribution to Pygments. Ultimate win if Github implements this
+	This project is a demonstration of my contribution to Pygments. Ultimate win if Github implements this.
+	</p>
+
+	<p>
+	Source available at <a href="https://github.com/pepijndevos/spelunking">Github</a>
 	</p>
 
 	<form onsubmit="window.location.href = document.forms[0]['username'].value; return false;">
