display load on homepage

--- a/templates/home.html
+++ b/templates/home.html
@@ -23,5 +23,7 @@
 		<label>Github username <input type="text" id="username" /></label>
 		<input type="submit" value="Go!" />
 	</form>
+
+	<p>Load: {{ load }}</p>
 </body>
 </html>
