leverage nginx for files

--- a/templates/wait.html
+++ b/templates/wait.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
 	<title>{{ owner }} {% if repo %} -- {{ repo }}{% endif %}</title>
+	<meta http-equiv="refresh" content="5"/>
 </head>
 <body>
 	<h1>{{ owner }}</h1>
 	{% if repo %}<h2>{{ repo }}</h2>{% endif %}
-	Repository is being downloaded. Check back later.
+	Page is being generated. Please wait...
 </body>
 </html>
